--- a/scss/blocks/_block7.scss
+++ b/scss/blocks/_block7.scss
@@ -23,30 +23,49 @@
     display: flex;
     flex-direction: column;
     & .intut_text {
-        margin-bottom: 20px;
-        padding: 30px 21px;
+      margin-bottom: 20px;
+      padding: 30px 21px;
+    }
+    & .checkbox {
+      position: relative;
+      display: flex;
+      align-items: center;
+      &__real {
+        display: none;
+        &:checked + .checkbox__custom::before {
+          display: block;
+        }
+      }
+      &__custom {
+        position: relative;
+        width: 24px;
+        height: 24px;
+        border: 1px solid #ffffff;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 10px;
+        &::before {
+          content: url(../../img/okey.svg);
+          position: absolute;
+          transform: translate(-50%, -50%);
+          top: 50%;
+          left: 50%;
+          display: none;
+        }
       }
     }
-    // .grounded-radiants {
-    //   position: relative;
-    //   z-index: 5;
-    //   border: 4px solid transparent;
-    //   border-radius: 10px;
-    //   background: linear-gradient(orange, violet);
-    //   background-clip: padding-box;
-    //   padding: 30px 21px;
-    // }
-
-    // .grounded-radiants::after {
-    //   position: absolute;
-    //   top: -10px;
-    //   bottom: -10px;
-    //   left: -10px;
-    //   right: -10px;
-    //   background: linear-gradient(red, blue);
-    //   content: "";
-    //   z-index: 4;
-    //   border-radius: 10px;
-    // }
+  }
+  &__button {
+    margin-top: 32px;
+    padding: 35px 132px;
+    background: #ff6c4f;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 22px;
+    color: #ffffff;
+    border: none;
   }
 }
