--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 @import "./mixin";
 @import "./general";
 @import "./blocks/header";
+@import "./blocks/footer";
 @import "./blocks/block1";
 @import "./blocks/block2";
 @import "./blocks/block3";
@@ -11,3 +12,5 @@
 @import "./blocks/block5";
 @import "./blocks/block6";
 @import "./blocks/block7";
+@import "./blocks/block8";
+@import "./blocks/block9";
